2006-03-01  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	* src/conn-avoid-ref.cpp, src/libavoid/connector.h,
	  src/libavoid/shape.cpp, src/libavoid/graph.cpp, src/libavoid/shape.h,
	  src/libavoid/graph.h, src/libavoid/router.cpp, src/libavoid/router.h,
	  src/libavoid/connector.cpp, src/libavoid/debug.h:

	  Some speed improvements and interface cleanups to libavoid.

2006-02-28  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/swatches.cpp:

	  Fixed drag-n-drop out of color to match GTK+ standard.
	
2006-02-27  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/swatches.cpp, src/ui/previewfillable.h,
	  src/ui/previewholder.h, src/ui/previewholder.cpp:

	  Finished cleanup of embedded swatches when switching palettes.
	
2006-02-26  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/swatches.cpp, src/ui/previewholder.h,
	  src/ui/previewholder.cpp:

	  Changing embedded swatches resizing.
	
2006-02-26  Jon A. Cruz  <jon@joncruz.org>
	* src/text-context.cpp:

	  Allow Private Use Area characters. Fixes bug #1439016.
	
2006-02-18  Jon A. Cruz  <jon@joncruz.org>
	* src/dialogs/swatches.cpp, src/dialogs/iconpreview.cpp,
	  src/ui/widget/panel.cpp, src/ui/widget/panel.h:

	  Refactoring panel containment. Purged ugly 'X'.
	
2006-02-18  Jon A. Cruz  <jon@joncruz.org>
	* src/widgets/desktop-widget.cpp, src/dialogs/swatches.cpp,
	  src/dialogs/swatches.h, src/ui/widget/panel.cpp,
	  src/ui/widget/panel.h, src/ui/previewholder.cpp,
	  src/ui/previewholder.h:

	  Adding spacer to get swatches scrollbar enough room to move.
	  Tuning up API for better embedding.

2006-02-18  Jon A. Cruz  <jon@joncruz.org>
	* src/widgets/desktop-widget.cpp, src/dialogs/swatches.cpp,
	  src/dialogs/swatches.h, src/ui/previewholder.cpp, 
	  src/ui/previewfillable.h, src/ui/previewholder.h:

	  Removed horizontal scroll bar from swatches when embedded.

2006-02-15  Michael Wybrow  <mjwybrow@users.sourceforge.net>

	*  src/document.cpp, src/document.h, src/sp-conn-end-pair.cpp, 